--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,3 +1,5 @@
+<!-- wp:template-part {"slug":"header", "tagName":"header"} /-->
+
 <!-- wp:query {"queryId":1, "query":{"offset":0, "postType":"post", "categoryIds":[], "tagIds":[], "order":"desc", "orderBy":"date", "author":"", "search":"", "sticky":""}} -->
 
     <!-- wp:query-loop -->
@@ -9,3 +11,5 @@
     <!-- /wp:query-loop -->
 
 <!-- /wp:query -->
+
+<!-- wp:template-part {"slug":"footer", "tagName":"footer"} /-->
