--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,15 +1,25 @@
 <!-- wp:template-part {"slug":"header", "tagName":"header"} /-->
 
-<!-- wp:query {"queryId":1, "query":{"offset":0, "postType":"post", "categoryIds":[], "tagIds":[], "order":"desc", "orderBy":"date", "author":"", "search":"", "sticky":""}} -->
+<!-- wp:group {"layout":{"inherit":true},"tagName":"main"} -->
+<main class="wp-block-group">
 
-    <!-- wp:query-loop -->
+    <!-- wp:query -->
+    <div class="wp-block-query">
 
-        <!-- wp:post-title {"isLink":true} /-->
+        <!-- wp:query-loop -->
 
-        <!-- wp:post-excerpt /-->
+            <!-- wp:post-title /-->
 
-    <!-- /wp:query-loop -->
+            <!-- wp:post-date /-->
 
-<!-- /wp:query -->
+            <!-- wp:post-excerpt /-->
+
+        <!-- /wp:query-loop -->
+
+    </div>
+    <!-- /wp:query -->
+
+</main>
+<!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer", "tagName":"footer"} /-->
