Add block template parts

--- a/block-template-parts/footer.html
+++ b/block-template-parts/footer.html
@@ -1,3 +1,36 @@
-<!-- wp:paragraph {"align":"center"} -->
-<p class="has-text-align-center"><small><a href="https://www.slicktheme.it/" rel="external" >Built with Slick theme</a>.</small></p>
-<!-- /wp:paragraph -->
+<!-- wp:social-links -->
+<ul class="wp-block-social-links has-small-icon-size items-justified-center">
+
+    <!-- wp:social-link {"service":"facebook", "url":"#"} /-->
+
+    <!-- wp:social-link {"service":"instagram", "url":"#"} /-->
+
+    <!-- wp:social-link {"service":"linkedin", "url":"#"} /-->
+
+    <!-- wp:social-link {"service":"pinterest", "url":"#"} /-->
+
+    <!-- wp:social-link {"service":"tiktok", "url":"#"} /-->
+
+    <!-- wp:social-link {"service":"twitch", "url":"#"} /-->
+
+    <!-- wp:social-link {"service":"twitter", "url":"#"} /-->
+
+    <!-- wp:social-link {"service":"youtube", "url":"#"} /-->
+
+</ul>
+<!-- /wp:social-links -->
+
+
+
+<!-- wp:group -->
+<div class="wp-block-group">
+    <div class="wp-block-group__inner-container">
+        <!-- wp:paragraph {"textAlign":"center"} -->
+        <p class="has-text-align-center">
+            <a href="http://wordpress.org/" rel="external">Powered by WordPress</a> with <a href="https://www.slicktheme.it" rel="external">Slick theme</a> by <a href="https://www.guglielmopepe.com" rel="external">Guglielmo Pepe</a>
+        </p>
+        <!-- /wp:paragraph -->
+
+    </div>
+</div>
+<!-- /wp:group -->
