Change single.html template

--- a/block-template-parts/aside.html
+++ b/block-template-parts/aside.html
@@ -13,13 +13,13 @@
     </nav>
     <!-- /wp:column -->
 
-    <!-- wp:group {"tagName":"div"} -->
-    <div class="wp-block-group">
+    <!-- wp:column {"tagName":"div"} -->
+    <div class="wp-block-column">
 
         <!-- wp:search {"ShowLabel":false} /-->
 
     </div>
-    <!-- /wp:group -->
+    <!-- /wp:column -->
 
     <!-- wp:column {"tagName":"nav"} -->
     <nav class="wp-block-column">
