--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -8,13 +8,7 @@
 
             <!-- wp:post-featured-image /-->
 
-            <!-- wp:post-title /-->
-
-            <!-- wp:post-author /-->
-
-            <!-- wp:post-date /-->
-
-            <!-- wp:post-terms {"term":"category"} /-->
+            <!-- wp:post-title {"textAlign":"center"} /-->
 
     </header>
     <!-- /wp:group -->
@@ -24,9 +18,29 @@
     <!-- wp:group {"layout":{"inherit":true}, "tagName":"footer"} -->
     <footer class="wp-block-group">
 
+    <!-- wp:columns {"layout":{"inherit":true}, "tagName":"div"} -->
+    <div class="wp-block-columns">
 
+        <!-- wp:column {"tagName":"div"} -->
+        <div class="wp-block-column">
 
-        <!-- wp:post-terms {"term":"post_tag"} /-->
+            <!-- wp:post-author {"showAvatar":false, "textAlign":"center"} /-->
+            <!-- wp:post-date {"isLink":true, "textAlign":"center"} /-->
+
+        </div>
+        <!-- /wp:column -->
+
+        <!-- wp:column {"tagName":"div"} -->
+        <div class="wp-block-column">
+
+            <!-- wp:post-terms {"term":"category", "textAlign":"center"} /-->
+            <!-- wp:post-terms {"term":"post_tag", "textAlign":"center"} /-->
+
+        </div>
+        <!-- /wp:column -->
+
+    </div>
+    <!-- /wp:columns -->
 
     </footer>
     <!-- /wp:group -->
