--- a/block-template-parts/aside.html
+++ b/block-template-parts/aside.html
@@ -13,14 +13,6 @@
     </nav>
     <!-- /wp:column -->
 
-    <!-- wp:column {"tagName":"div"} -->
-    <div class="wp-block-column">
-
-        <!-- wp:search {"ShowLabel":false} /-->
-
-    </div>
-    <!-- /wp:column -->
-
     <!-- wp:column {"tagName":"nav"} -->
     <nav class="wp-block-column">
 
@@ -31,6 +23,18 @@
         <!-- wp:archives {"displayAsDropdown":false, "showPostCounts":true} /-->
 
     </nav>
+    <!-- /wp:column -->
+
+    <!-- wp:column {"tagName":"div"} -->
+    <div class="wp-block-column">
+
+        <!-- wp:heading -->
+        <h3>Search</h3>
+        <!-- /wp:heading -->
+
+        <!-- wp:search {"showLabel":false} /-->
+
+    </div>
     <!-- /wp:column -->
 
 </div>
