--- a/block-template-parts/footer.html
+++ b/block-template-parts/footer.html
@@ -20,14 +20,12 @@
 </ul>
 <!-- /wp:social-links -->
 
-
-
 <!-- wp:group -->
 <div class="wp-block-group">
     <div class="wp-block-group__inner-container">
         <!-- wp:paragraph {"textAlign":"center"} -->
         <p class="has-text-align-center">
-            <a href="http://wordpress.org/" rel="external">Powered by WordPress</a> with <a href="https://www.slicktheme.it" rel="external">Slick theme</a> by <a href="https://www.guglielmopepe.com" rel="external">Guglielmo Pepe</a>
+            <a href="https://www.guglielmopepe.com" rel="external">Powered by Guglielmo Pepe</a> with <a href="http://wordpress.org/" rel="external">WordPress</a> and <a href="https://www.slicktheme.it" rel="external">Slick theme</a>
         </p>
         <!-- /wp:paragraph -->
 
