--- a/block-template-parts/header.html
+++ b/block-template-parts/header.html
@@ -1,15 +1,20 @@
-<!-- wp:site-title {"textAlign":"center"} /-->
+<!-- wp:group -->
+<div class="wp-block-group">
 
-<!-- wp:site-tagline {"textAlign":"center"} /-->
+    <!-- wp:site-title {"textAlign":"center"} /-->
 
-<!-- wp:navigation {"orientation":"horizontal", "itemsJustification":"center"} -->
-<nav class="wp-block-navigation">
+    <!-- wp:site-tagline {"textAlign":"center"} /-->
 
-    <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
+    <!-- wp:navigation {"itemsJustification":"center", "orientation":"horizontal"} -->
+    <nav class="wp-block-navigation">
 
-    <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
+        <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
 
-    <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
+        <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
 
-</nav>
-<!-- /wp:navigation -->
+        <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
+
+    </nav>
+    <!-- /wp:navigation -->
+</div>
+<!-- /wp:group -->
