--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"header", "tagName":"header"} /-->
 
-<!-- wp:query {"className":"", "tagName":"main", "layout":{"inherit":true}, "queryId":1, "query":{"perPage":3, "offset":0, "postType":"post", "categoryIds":[], "tagIds":[], "order":"desc", "orderBy":"date", "author":"", "search":"", "sticky":""}} -->
+<!-- wp:query {"className":"", "tagName":"main", "layout":{"inherit":true}, "queryId":1,"query":{"perPage":"10","pages":"100","offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","sticky":"","inherit":true}} -->
 <main class="wp-block-query">
 
     <!-- wp:query-loop -->
@@ -8,6 +8,10 @@
         <!-- wp:post-title {"isLink":true} /-->
 
         <!-- wp:post-excerpt {"moreText":"Continue reading"} /-->
+
+        <!-- wp:spacer {"height":35} -->
+        <div style="height:35px" aria-hidden="true" class="wp-block-spacer"></div>
+        <!-- /wp:spacer -->
 
     <!-- /wp:query-loop -->
 
@@ -26,6 +30,10 @@
 
 </main>
 <!-- /wp:query -->
+
+<!-- wp:spacer {"height":70} -->
+<div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"aside", "tagName":"aside"} /-->
 
