--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -1,58 +1,101 @@
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"header", "tagName":"header"} /-->
 
+<!-- wp:spacer {"height":70} -->
+<div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
+
 <!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
 
     <!-- wp:group {"layout":{"inherit":true}, "tagName":"header"} -->
     <header class="wp-block-group">
 
-            <!-- wp:post-featured-image /-->
+        <!-- wp:post-featured-image {"align":"full"} /-->
 
-            <!-- wp:post-title {"textAlign":"center"} /-->
+        <!-- wp:post-title {"textAlign":"center"} /-->
 
     </header>
     <!-- /wp:group -->
 
     <!-- wp:post-content {"layout":{"inherit":true}} /-->
 
+    <!-- wp:spacer {"height":70} -->
+    <div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
+    <!-- wp:separator {"align":"center"} -->
+    <hr class="wp-block-separator aligncenter"/>
+    <!-- /wp:separator -->
+
+    <!-- wp:spacer {"height":35} -->
+    <div style="height:35px" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
     <!-- wp:group {"layout":{"inherit":true}, "tagName":"footer"} -->
     <footer class="wp-block-group">
 
-    <!-- wp:columns {"layout":{"inherit":true}, "tagName":"div"} -->
-    <div class="wp-block-columns">
+        <!-- wp:columns {"layout":{"inherit":true}, "tagName":"div"} -->
+        <div class="wp-block-columns">
 
-        <!-- wp:column {"tagName":"div"} -->
-        <div class="wp-block-column">
+            <!-- wp:column {"tagName":"div"} -->
+            <div class="wp-block-column">
 
-            <!-- wp:post-author {"showAvatar":false, "textAlign":"center"} /-->
-            <!-- wp:post-date {"isLink":true, "textAlign":"center"} /-->
+                <!-- wp:post-date {"isLink":true} /-->
+                <!-- wp:post-author {"showAvatar":false} /-->
+
+            </div>
+            <!-- /wp:column -->
+
+            <!-- wp:column {"tagName":"div"} -->
+            <div class="wp-block-column">
+
+                <!-- wp:post-terms {"term":"category", "textAlign":"right"} /-->
+                <!-- wp:post-terms {"term":"post_tag", "textAlign":"right"} /-->
+
+            </div>
+            <!-- /wp:column -->
 
         </div>
-        <!-- /wp:column -->
-
-        <!-- wp:column {"tagName":"div"} -->
-        <div class="wp-block-column">
-
-            <!-- wp:post-terms {"term":"category", "textAlign":"center"} /-->
-            <!-- wp:post-terms {"term":"post_tag", "textAlign":"center"} /-->
-
-        </div>
-        <!-- /wp:column -->
-
-    </div>
-    <!-- /wp:columns -->
+        <!-- /wp:columns -->
 
     </footer>
     <!-- /wp:group -->
 
+    <!-- wp:spacer {"height":70} -->
+    <div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
     <!-- wp:group {"layout":{"inherit":true}, "tagName":"nav"} -->
     <nav class="wp-block-group">
 
-        <!-- wp:post-navigation-link {"type":"previous"} /-->
-        <!-- wp:post-navigation-link /-->
+        <!-- wp:columns {"layout":{"inherit":true}, "tagName":"div"} -->
+        <div class="wp-block-columns">
+
+            <!-- wp:column {"tagName":"div"} -->
+            <div class="wp-block-column">
+
+                <!-- wp:post-navigation-link {"type":"previous"} /-->
+
+            </div>
+            <!-- /wp:column -->
+
+            <!-- wp:column {"tagName":"div"} -->
+            <div class="wp-block-column">
+
+                <!-- wp:post-navigation-link {"textAlign":"right"} /-->
+
+            </div>
+            <!-- /wp:column -->
+
+        </div>
+        <!-- /wp:columns -->
 
     </nav>
     <!-- /wp:group -->
+
+    <!-- wp:spacer {"height":70} -->
+    <div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
 
     <!-- wp:group {"layout":{"inherit":true}, "tagName":"footer"} -->
     <footer class="wp-block-group">
@@ -62,10 +105,12 @@
     </footer>
     <!-- /wp:group -->
 
-
-
 </main>
 <!-- /wp:group -->
+
+<!-- wp:spacer {"height":70} -->
+<div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"aside", "tagName":"aside"} /-->
 
