--- a/block-template-parts/header.html
+++ b/block-template-parts/header.html
@@ -8,11 +8,13 @@
     <!-- wp:navigation {"itemsJustification":"center", "orientation":"horizontal"} -->
     <nav class="wp-block-navigation">
 
-        <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
+        <!-- wp:navigation-link {"label":"Home", "url":"#"} /-->
 
-        <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
+        <!-- wp:navigation-link {"label":"Portfolio", "url":"#"} /-->
 
-        <!-- wp:navigation-link {"label":"Link", "url":"#"} /-->
+        <!-- wp:navigation-link {"label":"About me", "url":"#"} /-->
+
+        <!-- wp:navigation-link {"label":"Contact me", "url":"#"} /-->
 
     </nav>
     <!-- /wp:navigation -->
