--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -12,7 +12,7 @@
 
         <!-- wp:post-featured-image {"align":"full"} /-->
 
-        <!-- wp:post-title {"textAlign":"center"} /-->
+        <!-- wp:post-title {"isLink":true} /-->
 
     </header>
     <!-- /wp:group -->
