--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -8,7 +8,7 @@
     <!-- /wp:spacer -->
 
 
-    <!-- wp:query-loop -->
+    <!-- wp:post-template -->
 
         <!-- wp:post-title {"isLink":true} /-->
 
@@ -18,7 +18,7 @@
         <div style="height:35px" aria-hidden="true" class="wp-block-spacer"></div>
         <!-- /wp:spacer -->
 
-    <!-- /wp:query-loop -->
+    <!-- /wp:post-template -->
 
 
     <!-- wp:query-pagination {"layout":{"inherit":true}} -->
