--- a/block-template-parts/aside.html
+++ b/block-template-parts/aside.html
@@ -1,8 +1,8 @@
 <!-- wp:columns {"tagName":"div"} -->
 <div class="wp-block-columns">
 
-    <!-- wp:column {"tagName":"nav"} -->
-    <nav class="wp-block-column">
+    <!-- wp:column {"tagName":"div"} -->
+    <div class="wp-block-column">
 
         <!-- wp:heading -->
         <h2>Categories</h2>
@@ -10,11 +10,11 @@
 
         <!-- wp:core/categories {"displayAsDropdown":false, "showPostCounts":true, "showHierarchy":false} /-->
 
-    </nav>
+    </div>
     <!-- /wp:column -->
 
-    <!-- wp:column {"tagName":"nav"} -->
-    <nav class="wp-block-column">
+    <!-- wp:column {"tagName":"div"} -->
+    <div class="wp-block-column">
 
         <!-- wp:heading -->
         <h2>Archives</h2>
@@ -22,7 +22,7 @@
 
         <!-- wp:archives {"displayAsDropdown":false, "showPostCounts":true} /-->
 
-    </nav>
+    </div>
     <!-- /wp:column -->
 
     <!-- wp:column {"tagName":"div"} -->
