--- a/block-template-parts/header.html
+++ b/block-template-parts/header.html
@@ -5,7 +5,8 @@
 
     <!-- wp:site-tagline {"textAlign":"center"} /-->
 
-    <!-- wp:navigation {"itemsJustification":"center", "orientation":"horizontal"} -->
+    <!-- /*wp:navigation {"itemsJustification":"center", "orientation":"horizontal"}*/ -->
+    <!-- wp:navigation {"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"center"}} -->
 
         <!-- wp:navigation-link {"label":"Home", "url":"#"} /-->
 
