--- a/parts/header.html
+++ b/parts/header.html
@@ -1,21 +1,27 @@
-<!-- wp:group -->
-<div class="wp-block-group">
+<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none)">
 
-    <!-- wp:site-title {"textAlign":"center"} /-->
+    <!-- wp:group {"align":"full","style":{"spacing":{"padding":{"top":"var:preset|spacing|l","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"},"elements":{"link":{"color":{"text":"var:preset|color|grade-1"}}}},"backgroundColor":"grade-90","textColor":"grade-1","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} -->
+    <div class="wp-block-group alignfull has-grade-1-color has-grade-90-background-color has-text-color has-background has-link-color" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
 
-    <!-- wp:site-tagline {"textAlign":"center"} /-->
+        <!-- wp:site-title {"textAlign":"center"} /-->
 
-    <!-- wp:navigation {"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"center"}} -->
+        <!-- wp:site-tagline /-->
 
-        <!-- wp:navigation-link {"label":"Home", "url":"#"} /-->
+        <!-- wp:navigation {"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"space-between"},"style":{"layout":{"selfStretch":"fit","flexSize":null},"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
 
-        <!-- wp:navigation-link {"label":"Portfolio", "url":"#"} /-->
+            <!-- wp:navigation-link {"label":"Home","url":"#"} /-->
 
-        <!-- wp:navigation-link {"label":"About me", "url":"#"} /-->
+            <!-- wp:navigation-link {"label":"Portfolio","url":"#"} /-->
 
-        <!-- wp:navigation-link {"label":"Contact me", "url":"#"} /-->
+            <!-- wp:navigation-link {"label":"About me","url":"#"} /-->
 
-    <!-- /wp:navigation -->
+            <!-- wp:navigation-link {"label":"Contact me","url":"#"} /-->
+
+        <!-- /wp:navigation -->
+
+    </div>
+    <!-- /wp:group -->
 
 </div>
 <!-- /wp:group -->
