--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,34 +1,39 @@
-<!-- wp:social-links -->
-<ul class="wp-block-social-links has-small-icon-size items-justified-center">
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|xxxl","bottom":"var:preset|spacing|xl","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"},"elements":{"link":{"color":{"text":"var:preset|color|grade-1"}}}},"backgroundColor":"grade-90","textColor":"grade-1","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-grade-1-color has-grade-90-background-color has-text-color has-background has-link-color" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xxxl);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--xl);padding-left:var(--wp--preset--spacing--l)">
 
-    <!-- wp:social-link {"service":"facebook", "url":"#"} /-->
+    <!-- wp:social-links {"iconColor":"grade-1","iconColorValue":"#fcfcfc","openInNewTab":true,"size":"has-small-icon-size","align":"center","style":{"spacing":{"margin":{"top":"0","bottom":"0","left":"var:preset|spacing|none","right":"var:preset|spacing|none"},"blockGap":{"top":"var:preset|spacing|l","left":"var:preset|spacing|l"}}},"className":"is-style-logos-only","layout":{"type":"flex","justifyContent":"center"}} -->
+    <ul class="wp-block-social-links aligncenter has-small-icon-size has-icon-color is-style-logos-only" style="margin-top:0;margin-right:var(--wp--preset--spacing--none);margin-bottom:0;margin-left:var(--wp--preset--spacing--none)">
 
-    <!-- wp:social-link {"service":"instagram", "url":"#"} /-->
+        <!-- wp:social-link {"url":"#","service":"facebook"} /-->
 
-    <!-- wp:social-link {"service":"linkedin", "url":"#"} /-->
+        <!-- wp:social-link {"url":"#","service":"instagram"} /-->
 
-    <!-- wp:social-link {"service":"pinterest", "url":"#"} /-->
+        <!-- wp:social-link {"url":"#","service":"linkedin"} /-->
 
-    <!-- wp:social-link {"service":"tiktok", "url":"#"} /-->
+        <!-- wp:social-link {"url":"#","service":"pinterest"} /-->
 
-    <!-- wp:social-link {"service":"twitch", "url":"#"} /-->
+        <!-- wp:social-link {"url":"#","service":"tiktok"} /-->
 
-    <!-- wp:social-link {"service":"twitter", "url":"#"} /-->
+        <!-- wp:social-link {"url":"#","service":"twitch"} /-->
 
-    <!-- wp:social-link {"service":"youtube", "url":"#"} /-->
+        <!-- wp:social-link {"url":"#","service":"x"} /-->
 
-</ul>
-<!-- /wp:social-links -->
+        <!-- wp:social-link {"url":"#","service":"youtube"} /-->
 
-<!-- wp:group -->
-<div class="wp-block-group">
-    <div class="wp-block-group__inner-container">
-        <!-- wp:paragraph {"textAlign":"center"} -->
+    </ul>
+    <!-- /wp:social-links -->
+
+    <!-- wp:group {"align":"full","style":{"elements":{"link":{"color":{"text":"var:preset|color|grade-1"}}}},"textColor":"grade-1","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} -->
+    <div class="wp-block-group alignfull has-grade-1-color has-text-color has-link-color">
+
+        <!-- wp:paragraph {"align":"center","className":"has-text-align-center"} -->
         <p class="has-text-align-center">
-            <a href="https://www.guglielmopepe.com" rel="external">Powered by Guglielmo Pepe</a> with <a href="http://wordpress.org/" rel="external">WordPress</a> and <a href="https://www.slicktheme.it" rel="external">Slick theme</a>
+            <a href="https://www.guglielmopepe.com" rel="external">Powered by Guglielmo Pepe</a>&nbsp;with <a href="http://wordpress.org/" rel="external">WordPress</a> and <a href="https://www.slicktheme.it" rel="external">Slick theme</a>
         </p>
         <!-- /wp:paragraph -->
 
     </div>
+    <!-- /wp:group -->
+
 </div>
 <!-- /wp:group -->
