--- a/parts/aside.html
+++ b/parts/aside.html
@@ -1,41 +1,46 @@
-<!-- wp:columns {"tagName":"div"} -->
-<div class="wp-block-columns">
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|xl","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"},"elements":{"link":{"color":{"text":"var:preset|color|grade-1"}}}},"backgroundColor":"grade-90","textColor":"grade-1","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-grade-1-color has-grade-90-background-color has-text-color has-background has-link-color" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xl);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
 
-    <!-- wp:column {"tagName":"div"} -->
-    <div class="wp-block-column">
+    <!-- wp:columns {"align":"full","style":{"spacing":{"blockGap":{"top":"var:preset|spacing|l","left":"var:preset|spacing|l"}}}} -->
+    <div class="wp-block-columns alignfull">
 
-        <!-- wp:heading -->
-        <h2>Categories</h2>
-        <!-- /wp:heading -->
+        <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
+        <div class="wp-block-column">
 
-        <!-- wp:core/categories {"displayAsDropdown":false, "showPostCounts":true, "showHierarchy":false} /-->
+            <!-- wp:heading -->
+            <h2 class="wp-block-heading">Categorie</h2>
+            <!-- /wp:heading -->
+
+            <!-- wp:categories {"style":{"spacing":{"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l"}}}} /-->
+
+        </div>
+        <!-- /wp:column -->
+
+        <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
+        <div class="wp-block-column">
+
+            <!-- wp:heading -->
+            <h2 class="wp-block-heading">Archives</h2>
+            <!-- /wp:heading -->
+
+            <!-- wp:archives {"align":"center","style":{"spacing":{"padding":{"right":"16px","left":"16px"}}}} /-->
+
+        </div>
+        <!-- /wp:column -->
+
+        <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
+        <div class="wp-block-column">
+
+            <!-- wp:heading -->
+            <h2 class="wp-block-heading">Search</h2>
+            <!-- /wp:heading -->
+
+            <!-- wp:search {"label":"Cerca","showLabel":false,"buttonText":"Cerca"} /--></div>
+
+        <!-- /wp:column -->
 
     </div>
-    <!-- /wp:column -->
-
-    <!-- wp:column {"tagName":"div"} -->
-    <div class="wp-block-column">
-
-        <!-- wp:heading -->
-        <h2>Archives</h2>
-        <!-- /wp:heading -->
-
-        <!-- wp:archives {"displayAsDropdown":false, "showPostCounts":true} /-->
-
-    </div>
-    <!-- /wp:column -->
-
-    <!-- wp:column {"tagName":"div"} -->
-    <div class="wp-block-column">
-
-        <!-- wp:heading -->
-        <h2>Search</h2>
-        <!-- /wp:heading -->
-
-        <!-- wp:search {"showLabel":false} /-->
-
-    </div>
-    <!-- /wp:column -->
+    <!-- /wp:columns -->
 
 </div>
-<!-- /wp:columns -->
+<!-- /wp:group -->
