Add files for version 1.2.0

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,36 +1,42 @@
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|xxxl","bottom":"var:preset|spacing|xl","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"},"elements":{"link":{"color":{"text":"var:preset|color|grade-1"}}}},"backgroundColor":"grade-90","textColor":"grade-1","layout":{"type":"constrained"}} -->
-<div class="wp-block-group has-grade-1-color has-grade-90-background-color has-text-color has-background has-link-color" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xxxl);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--xl);padding-left:var(--wp--preset--spacing--l)">
+<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"},"elements":{"link":{"color":{"text":"var:preset|color|primary-lighter"}}}},"backgroundColor":"primary-darker","textColor":"primary-lighter","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-primary-lighter-color has-primary-darker-background-color has-text-color has-background has-link-color" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
 
-    <!-- wp:social-links {"iconColor":"grade-1","iconColorValue":"#fcfcfc","openInNewTab":true,"size":"has-small-icon-size","align":"center","style":{"spacing":{"margin":{"top":"0","bottom":"0","left":"var:preset|spacing|none","right":"var:preset|spacing|none"},"blockGap":{"top":"var:preset|spacing|l","left":"var:preset|spacing|l"}}},"className":"is-style-logos-only","layout":{"type":"flex","justifyContent":"center"}} -->
-    <ul class="wp-block-social-links aligncenter has-small-icon-size has-icon-color is-style-logos-only" style="margin-top:0;margin-right:var(--wp--preset--spacing--none);margin-bottom:0;margin-left:var(--wp--preset--spacing--none)">
+    <!-- wp:group {"align":"full","style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|xl","bottom":"var:preset|spacing|xl"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
+    <div class="wp-block-group alignfull" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xl);padding-right:0;padding-bottom:var(--wp--preset--spacing--xl);padding-left:0">
 
-        <!-- wp:social-link {"url":"#","service":"facebook"} /-->
+        <!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}},"layout":{"type":"constrained"}} -->
+        <div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
 
-        <!-- wp:social-link {"url":"#","service":"instagram"} /-->
+            <!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"var:preset|spacing|l","left":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"var:preset|spacing|none","left":"var:preset|spacing|none","top":"0","bottom":"0"}}}} -->
+            <div class="wp-block-columns" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:0;padding-right:var(--wp--preset--spacing--none);padding-bottom:0;padding-left:var(--wp--preset--spacing--none)">
 
-        <!-- wp:social-link {"url":"#","service":"linkedin"} /-->
+                <!-- wp:column {"verticalAlignment":"stretch","style":{"spacing":{"blockGap":"var:preset|spacing|l","padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
+                <div class="wp-block-column is-vertically-aligned-stretch" style="padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
 
-        <!-- wp:social-link {"url":"#","service":"pinterest"} /-->
+                    <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}},"dimensions":{"minHeight":"100%"}},"layout":{"type":"flex","orientation":"vertical","verticalAlignment":"space-between","justifyContent":"stretch"}} -->
+                    <div class="wp-block-group" style="min-height:100%;margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
 
-        <!-- wp:social-link {"url":"#","service":"tiktok"} /-->
+                        <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l","top":"var:preset|spacing|l","bottom":"var:preset|spacing|l"}}},"layout":{"type":"constrained"}} -->
+                        <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
 
-        <!-- wp:social-link {"url":"#","service":"twitch"} /-->
+                            <!-- wp:paragraph {"align":"center"} -->
+                            <p class="has-text-align-center">Developed by <a href="https://www.guglielmopepe.com" data-type="link" data-id="https://www.guglielmopepe.com" target="_blank" rel="noreferrer noopener nofollow">Guglielmo Pepe</a> with <a href="https://wordpress.org/" data-type="link" data-id="https://wordpress.org/" target="_blank" rel="noreferrer noopener nofollow">WordPress</a> and <a href="https://www.slicktheme.it" data-type="link" data-id="https://www.slicktheme.it" target="_blank" rel="noreferrer noopener nofollow">Slick Theme</a></p>
+                            <!-- /wp:paragraph -->
 
-        <!-- wp:social-link {"url":"#","service":"x"} /-->
+                        </div>
+                        <!-- /wp:group -->
 
-        <!-- wp:social-link {"url":"#","service":"youtube"} /-->
+                    </div>
+                    <!-- /wp:group -->
 
-    </ul>
-    <!-- /wp:social-links -->
+                </div>
+                <!-- /wp:column -->
 
-    <!-- wp:group {"align":"full","style":{"elements":{"link":{"color":{"text":"var:preset|color|grade-1"}}}},"textColor":"grade-1","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} -->
-    <div class="wp-block-group alignfull has-grade-1-color has-text-color has-link-color">
+            </div>
+            <!-- /wp:columns -->
 
-        <!-- wp:paragraph {"align":"center","className":"has-text-align-center"} -->
-        <p class="has-text-align-center">
-            <a href="https://www.guglielmopepe.com" rel="external">Powered by Guglielmo Pepe</a>&nbsp;with <a href="http://wordpress.org/" rel="external">WordPress</a> and <a href="https://www.slicktheme.it" rel="external">Slick theme</a>
-        </p>
-        <!-- /wp:paragraph -->
+        </div>
+        <!-- /wp:group -->
 
     </div>
     <!-- /wp:group -->
