--- a/parts/aside.html
+++ b/parts/aside.html
@@ -1,46 +1,101 @@
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|xl","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"},"elements":{"link":{"color":{"text":"var:preset|color|grade-1"}}}},"backgroundColor":"grade-90","textColor":"grade-1","layout":{"type":"constrained"}} -->
-<div class="wp-block-group has-grade-1-color has-grade-90-background-color has-text-color has-background has-link-color" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xl);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"},"elements":{"link":{"color":{"text":"var:preset|color|primary-lighter"}}}},"backgroundColor":"primary-darker","textColor":"primary-lighter","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-primary-lighter-color has-primary-darker-background-color has-text-color has-background has-link-color" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
 
-    <!-- wp:columns {"align":"full","style":{"spacing":{"blockGap":{"top":"var:preset|spacing|l","left":"var:preset|spacing|l"}}}} -->
-    <div class="wp-block-columns alignfull">
+    <!-- wp:group {"align":"full","style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|xl","bottom":"var:preset|spacing|xl"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
+    <div class="wp-block-group alignfull" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xl);padding-right:0;padding-bottom:var(--wp--preset--spacing--xl);padding-left:0">
 
-        <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
-        <div class="wp-block-column">
+        <!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}},"layout":{"type":"constrained"}} -->
+        <div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
 
-            <!-- wp:heading -->
-            <h2 class="wp-block-heading">Categorie</h2>
-            <!-- /wp:heading -->
+            <!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"var:preset|spacing|l","left":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"var:preset|spacing|none","left":"var:preset|spacing|none","top":"0","bottom":"0"}}}} -->
+            <div class="wp-block-columns" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:0;padding-right:var(--wp--preset--spacing--none);padding-bottom:0;padding-left:var(--wp--preset--spacing--none)">
 
-            <!-- wp:categories {"style":{"spacing":{"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l"}}}} /-->
+                <!-- wp:column {"verticalAlignment":"stretch","width":"50%","style":{"spacing":{"blockGap":"var:preset|spacing|l","padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
+                <div class="wp-block-column is-vertically-aligned-stretch" style="padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0;flex-basis:50%">
+
+                    <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}},"dimensions":{"minHeight":"100%"}},"layout":{"type":"flex","orientation":"vertical","verticalAlignment":"space-between"}} -->
+                    <div class="wp-block-group" style="min-height:100%;margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
+
+                        <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l","top":"var:preset|spacing|l","bottom":"var:preset|spacing|l"}}},"layout":{"type":"constrained"}} -->
+                        <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+
+                            <!-- wp:heading -->
+                            <h2 class="wp-block-heading">About me</h2>
+                            <!-- /wp:heading -->
+
+                            <!-- wp:paragraph -->
+                            <p>Sample content. Replace the text with your own content.</p>
+                            <!-- /wp:paragraph -->
+
+                            <!-- wp:paragraph -->
+                            <p>Sample content. Replace the text with your own content.</p>
+                            <!-- /wp:paragraph -->
+
+                        </div>
+                        <!-- /wp:group -->
+
+                    </div>
+                    <!-- /wp:group -->
+
+                </div>
+                <!-- /wp:column -->
+
+                <!-- wp:column {"verticalAlignment":"stretch","width":"25%","style":{"spacing":{"blockGap":"var:preset|spacing|l","padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
+                <div class="wp-block-column is-vertically-aligned-stretch" style="padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0;flex-basis:25%">
+
+                    <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}},"dimensions":{"minHeight":"100%"}},"layout":{"type":"flex","orientation":"vertical","verticalAlignment":"space-between"}} -->
+                    <div class="wp-block-group" style="min-height:100%;margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
+
+                        <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l","top":"var:preset|spacing|l","bottom":"var:preset|spacing|l"}}},"layout":{"type":"constrained"}} -->
+                        <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+
+                            <!-- wp:heading -->
+                            <h2 class="wp-block-heading">Categories</h2>
+                            <!-- /wp:heading -->
+
+                            <!-- wp:categories {"style":{"spacing":{"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l"}}}} /-->
+
+                        </div>
+                        <!-- /wp:group -->
+
+                    </div>
+                    <!-- /wp:group -->
+
+                </div>
+                <!-- /wp:column -->
+
+                <!-- wp:column {"verticalAlignment":"stretch","width":"25%","style":{"spacing":{"blockGap":"var:preset|spacing|l","padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
+                <div class="wp-block-column is-vertically-aligned-stretch" style="padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0;flex-basis:25%">
+
+                    <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}},"dimensions":{"minHeight":"100%"}},"layout":{"type":"flex","orientation":"vertical","verticalAlignment":"space-between"}} -->
+                    <div class="wp-block-group" style="min-height:100%;margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
+
+                        <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l","top":"var:preset|spacing|l","bottom":"var:preset|spacing|l"}}},"layout":{"type":"constrained"}} -->
+                        <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+
+                            <!-- wp:heading -->
+                            <h2 class="wp-block-heading">Archives</h2>
+                            <!-- /wp:heading -->
+
+                            <!-- wp:archives {"style":{"spacing":{"padding":{"right":"var:preset|spacing|l","left":"var:preset|spacing|l"}}}} /-->
+
+                        </div>
+                        <!-- /wp:group -->
+
+                    </div>
+                    <!-- /wp:group -->
+
+                </div>
+                <!-- /wp:column -->
+
+            </div>
+            <!-- /wp:columns -->
 
         </div>
-        <!-- /wp:column -->
-
-        <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
-        <div class="wp-block-column">
-
-            <!-- wp:heading -->
-            <h2 class="wp-block-heading">Archives</h2>
-            <!-- /wp:heading -->
-
-            <!-- wp:archives {"align":"center","style":{"spacing":{"padding":{"right":"16px","left":"16px"}}}} /-->
-
-        </div>
-        <!-- /wp:column -->
-
-        <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
-        <div class="wp-block-column">
-
-            <!-- wp:heading -->
-            <h2 class="wp-block-heading">Search</h2>
-            <!-- /wp:heading -->
-
-            <!-- wp:search {"label":"Cerca","showLabel":false,"buttonText":"Cerca"} /--></div>
-
-        <!-- /wp:column -->
+        <!-- /wp:group -->
 
     </div>
-    <!-- /wp:columns -->
+    <!-- /wp:group -->
 
 </div>
 <!-- /wp:group -->
