Add other templates

--- a/parts/header.html
+++ b/parts/header.html
@@ -57,9 +57,9 @@
 
                                 <!-- wp:navigation-link {"label":"Home", "url":"#"} /-->
 
-                                <!-- wp:navigation-link {"label":"Portfolio", "url":"#"} /-->
+                                <!-- wp:navigation-link {"label":"Who i am", "url":"#"} /-->
 
-                                <!-- wp:navigation-link {"label":"About me", "url":"#"} /-->
+                                <!-- wp:navigation-link {"label":"What i do", "url":"#"} /-->
 
                                 <!-- wp:navigation-link {"label":"Contact me", "url":"#"} /-->
 
